--- a/docs/examples/ewald-sphere.ipynb
+++ b/docs/examples/ewald-sphere.ipynb
@@ -93,21 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imaging_pipeline_wo_ewald = cxs.ContrastImagingPipeline(\n",
+    "image_model_wo_ewald = cxs.ContrastImageModel(\n",
     "    instrument_config, scattering_theory_wo_ewald\n",
     ")\n",
-    "imaging_pipeline_w_ewald = cxs.ContrastImagingPipeline(\n",
-    "    instrument_config, scattering_theory_w_ewald\n",
-    ")\n",
+    "image_model_w_ewald = cxs.ContrastImageModel(instrument_config, scattering_theory_w_ewald)\n",
     "\n",
     "key = jax.random.key(0)\n",
     "im_wo_ewald, im_w_ewald = (\n",
-    "    imaging_pipeline_wo_ewald.render(key),\n",
-    "    imaging_pipeline_w_ewald.render(key),\n",
+    "    image_model_wo_ewald.render(key),\n",
+    "    image_model_w_ewald.render(key),\n",
     ")"
    ]
   },
