--- a/docs/examples/multislice.ipynb
+++ b/docs/examples/multislice.ipynb
@@ -182,24 +182,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "multislice_imaging_pipeline = cxs.ContrastImagingPipeline(\n",
+    "multislice_image_model = cxs.ContrastImageModel(\n",
     "    instrument_config, multislice_scattering_theory\n",
     ")\n",
-    "high_energy_imaging_pipeline = cxs.ContrastImagingPipeline(\n",
+    "high_energy_image_model = cxs.ContrastImageModel(\n",
     "    instrument_config, high_energy_scattering_theory\n",
     ")\n",
-    "weak_phase_imaging_pipeline = cxs.ContrastImagingPipeline(\n",
+    "weak_phase_image_model = cxs.ContrastImageModel(\n",
     "    instrument_config, weak_phase_scattering_theory\n",
     ")\n",
     "\n",
     "im1, im2, im3 = (\n",
-    "    multislice_imaging_pipeline.render(),\n",
-    "    high_energy_imaging_pipeline.render(),\n",
-    "    weak_phase_imaging_pipeline.render(),\n",
+    "    multislice_image_model.render(),\n",
+    "    high_energy_image_model.render(),\n",
+    "    weak_phase_image_model.render(),\n",
     ")"
    ]
   },
