--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -136,12 +136,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we create an `InstrumentConfig` and initialize our `AbstractImagingPipeline`. Here, we select the `ContrastImagingPipeline`, which simulates the image contrast given a `scattering_theory`."
+    "Finally, we create an `InstrumentConfig` and initialize our `AbstractImageModel`. Here, we select the `ContrastImageModel`, which simulates the image contrast given a `scattering_theory`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,19 +153,19 @@
     "    padded_shape=potential.shape[:2],\n",
     ")\n",
     "# ... now, build the image formation model\n",
-    "imaging_pipeline = cxs.ContrastImagingPipeline(instrument_config, scattering_theory)"
+    "image_model = cxs.ContrastImageModel(instrument_config, scattering_theory)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before proceeding, we must create jit-compiled functions that simulate our images. We can either simulate the model without noise by calling the `imaging_pipeline.render()` function, or we can simulate an image with noise by passing a random number generator key as `imaging_pipeline.render(rng_key)`."
+    "Before proceeding, we must create jit-compiled functions that simulate our images. We can either simulate the model without noise by calling the `image_model.render()` function, or we can simulate an image with noise by passing a random number generator key as `image_model.render(rng_key)`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,15 +174,15 @@
     "\n",
     "\n",
     "@eqx.filter_jit\n",
-    "def compute_image(imaging_pipeline: cxs.AbstractImagingPipeline):\n",
-    "    \"\"\"Simulate an image without noise from a `imaging_pipeline`.\"\"\"\n",
-    "    return imaging_pipeline.render()\n",
+    "def compute_image(image_model: cxs.AbstractImageModel):\n",
+    "    \"\"\"Simulate an image without noise from a `image_model`.\"\"\"\n",
+    "    return image_model.render()\n",
     "\n",
     "\n",
     "@eqx.filter_jit\n",
-    "def compute_noisy_image(imaging_pipeline: cxs.AbstractImagingPipeline, key: PRNGKeyArray):\n",
-    "    \"\"\"Simulate an image with noise from a `imaging_pipeline`.\"\"\"\n",
-    "    return imaging_pipeline.render(key)"
+    "def compute_noisy_image(image_model: cxs.AbstractImageModel, key: PRNGKeyArray):\n",
+    "    \"\"\"Simulate an image with noise from a `image_model`.\"\"\"\n",
+    "    return image_model.render(key)"
    ]
   },
   {
@@ -191,14 +191,14 @@
    "source": [
     "**What's with the eqx.filter_jit?**\n",
     "\n",
-    "This is an example of an equinox *filtered transformation*. In this case, the `eqx.filter_jit` decorator is a lightweight wrapper around `jax.jit` that treats all of the `imaging_pipeline`'s JAX arrays as traced at compile time, and all of its non-JAX arrays as static. Alternatively, we could have used the usual `jax.jit` decorator and explicitly passed traced and static pytrees to our function. It is completely optional to use `equinox` decorators.\n",
+    "This is an example of an equinox *filtered transformation*. In this case, the `eqx.filter_jit` decorator is a lightweight wrapper around `jax.jit` that treats all of the `image_model`'s JAX arrays as traced at compile time, and all of its non-JAX arrays as static. Alternatively, we could have used the usual `jax.jit` decorator and explicitly passed traced and static pytrees to our function. It is completely optional to use `equinox` decorators.\n",
     "\n",
     "Filtered transformations are a cornerstone to `equinox` and it is highly recommended to learn about them. See [here](https://docs.kidger.site/equinox/all-of-equinox/#2-filtering) in the equinox documentation for an introduction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +218,13 @@
     "fig, axes = plt.subplots(ncols=2, figsize=(7, 4))\n",
     "ax1, ax2 = axes\n",
     "im1 = plot_image(\n",
-    "    compute_image(imaging_pipeline),\n",
+    "    compute_image(image_model),\n",
     "    fig,\n",
     "    ax1,\n",
     "    label=\"Image contrast\",\n",
     ")\n",
     "im2 = plot_image(\n",
-    "    compute_noisy_image(imaging_pipeline, key),\n",
+    "    compute_noisy_image(image_model, key),\n",
     "    fig,\n",
     "    ax2,\n",
     "    label=\"Image contrast with solvent noise\",\n",
@@ -236,12 +236,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the `compute_noisy_image` function draws an image from the noise models contained in the image formation `imaging_pipeline`. These noise models are meant to be physical noise models, so in theory, these do not need to cleanly correspond to sampling from a particular statistical distribution. Alternatively, the user can simulate an image from a specific distribution from the `cryojax.inference.distributions` module. In this example, we use the `IndependentGaussianFourierModes` distribution, which simulates images from an arbitrary noise power spectrum."
+    "Note that the `compute_noisy_image` function draws an image from the noise models contained in the image formation `image_model`. These noise models are meant to be physical noise models, so in theory, these do not need to cleanly correspond to sampling from a particular statistical distribution. Alternatively, the user can simulate an image from a specific distribution from the `cryojax.inference.distributions` module. In this example, we use the `IndependentGaussianFourierModes` distribution, which simulates images from an arbitrary noise power spectrum."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
     "\n",
     "@eqx.filter_jit\n",
     "def compute_image_with_distribution(distribution: dist.AbstractDistribution):\n",
-    "    \"\"\"Simulate an image with noise from a `imaging_pipeline`.\"\"\"\n",
+    "    \"\"\"Simulate an image with noise from a `image_model`.\"\"\"\n",
     "    return distribution.compute_signal()\n",
     "\n",
     "\n",
@@ -269,13 +269,13 @@
     "def compute_noisy_image_with_distribution(\n",
     "    distribution: dist.AbstractDistribution, key: PRNGKeyArray\n",
     "):\n",
-    "    \"\"\"Simulate an image with noise from a `imaging_pipeline`.\"\"\"\n",
+    "    \"\"\"Simulate an image with noise from a `image_model`.\"\"\"\n",
     "    return distribution.sample(key)\n",
     "\n",
     "\n",
     "# Passing the ImagePipeline and a variance function, instantiate the distribution\n",
     "distribution = dist.IndependentGaussianPixels(\n",
-    "    imaging_pipeline,\n",
+    "    image_model,\n",
     "    signal_scale_factor=1.0,\n",
     "    variance=1.0,\n",
     "    normalizes_signal=True,\n",
