--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -96,12 +96,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we will construct a `ContrastImagingPipeline` by batching over a set of random number generator keys."
+    "Now we will construct a `ContrastImageModel` by batching over a set of random number generator keys."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,9 +114,9 @@
     "\n",
     "\n",
     "@partial(eqx.filter_vmap, in_axes=(0, None), out_axes=(0, None))\n",
-    "def make_imaging_pipeline(\n",
+    "def make_image_model(\n",
     "    key: PRNGKeyArray, no_vmap: tuple[PyTree, ...]\n",
-    ") -> tuple[cxs.ContrastImagingPipeline, cxs.ContrastImagingPipeline]:\n",
+    ") -> tuple[cxs.ContrastImageModel, cxs.ContrastImageModel]:\n",
     "    config, potential, potential_integrator = no_vmap\n",
     "    # ... instantiate rotations\n",
     "    rotation = SO3.sample_uniform(key)\n",
@@ -135,19 +135,17 @@
     "    theory = cxs.WeakPhaseScatteringTheory(\n",
     "        structural_ensemble, potential_integrator, transfer_theory\n",
     "    )\n",
-    "    imaging_pipeline = cxs.ContrastImagingPipeline(config, theory)\n",
+    "    image_model = cxs.ContrastImageModel(config, theory)\n",
     "    # ... now, for some vmap considerations. first, specify which leaves we would\n",
     "    # like to broadcast over\n",
     "    where = lambda p: p.scattering_theory.structural_ensemble.pose\n",
     "    # ... use a cryojax wrapper to return a \"filter_spec\", a concept in `equinox`\n",
     "    # for performing what are called \"filtered transformations\"\n",
-    "    filter_spec = get_filter_spec(imaging_pipeline, where)\n",
-    "    # ... split up the `imaging_pipeline` into broadcasted and non-broadcasted\n",
+    "    filter_spec = get_filter_spec(image_model, where)\n",
+    "    # ... split up the `image_model` into broadcasted and non-broadcasted\n",
     "    # parts\n",
-    "    imaging_pipeline_vmap, imaging_pipeline_novmap = eqx.partition(\n",
-    "        imaging_pipeline, filter_spec\n",
-    "    )\n",
-    "    return imaging_pipeline_vmap, imaging_pipeline_novmap"
+    "    image_model_vmap, image_model_novmap = eqx.partition(image_model, filter_spec)\n",
+    "    return image_model_vmap, image_model_novmap"
    ]
   },
   {
@@ -156,7 +154,7 @@
    "source": [
     "!!! info \"What does `eqx.partition` do?\"\n",
     "    \n",
-    "    JAX transformations typically require grouping pytree leaves into different categories. `jax.jit` makes the distinction between traced and static arguments, `jax.vmap` has broadcasted and non-broadcasted arguments, and of course `jax.grad` has differentiated and non-differentiated. `equinox` makes grouping leaves more elegant with the concept of *filtered transformations*. In this example, we use a `cryojax` utility to create what is called a `filter_spec`, which is a pytree of booleans of the same structure as `imaging_pipeline`. The values are `True` at leaves specified by `where` and `False` otherwise. Then, `equinox.partition` is used to split up the pytree into broadcasted and non-broadcasted arguments. Filtered transformations are a cornerstone to `equinox` and it is highly recommended to learn about them. See [here](https://docs.kidger.site/equinox/examples/frozen_layer/) in the equinox documentation for reading.\n",
+    "    JAX transformations typically require grouping pytree leaves into different categories. `jax.jit` makes the distinction between traced and static arguments, `jax.vmap` has broadcasted and non-broadcasted arguments, and of course `jax.grad` has differentiated and non-differentiated. `equinox` makes grouping leaves more elegant with the concept of *filtered transformations*. In this example, we use a `cryojax` utility to create what is called a `filter_spec`, which is a pytree of booleans of the same structure as `image_model`. The values are `True` at leaves specified by `where` and `False` otherwise. Then, `equinox.partition` is used to split up the pytree into broadcasted and non-broadcasted arguments. Filtered transformations are a cornerstone to `equinox` and it is highly recommended to learn about them. See [here](https://docs.kidger.site/equinox/examples/frozen_layer/) in the equinox documentation for reading.\n",
     "\n",
     "!!! info \"Why do we set `out_axes=(0, None)`?\"\n",
     "    \n",
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -227,25 +225,25 @@
     "keys = jax.random.split(jax.random.PRNGKey(12345), number_of_poses)\n",
     "\n",
     "# ... instantiate the instrument_pipeline\n",
-    "imaging_pipeline_vmap, imaging_pipeline_novmap = make_imaging_pipeline(\n",
+    "image_model_vmap, image_model_novmap = make_image_model(\n",
     "    keys, (instrument_config, potential, potential_integrator)\n",
     ")\n",
     "# ... inspect the objects\n",
-    "print(imaging_pipeline_vmap)"
+    "print(image_model_vmap)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This may be a little odd at first. We have contructed `ContrastImagingPipeline`s, where if we were to directly call their `render` method, we would get an error. Some arguments are broadcasted and others are `None` Think of it this way: because we created our `imaging_pipeline`s with a `vmap`, functions can now only be called after crossing `vmap` boundaries. There is very good reason for this! To learn more, read the section of the equinox documentation on [model ensembling](https://docs.kidger.site/equinox/tricks/#ensembling).\n",
+    "This may be a little odd at first. We have contructed `ContrastImageModel`s, where if we were to directly call their `render` method, we would get an error. Some arguments are broadcasted and others are `None` Think of it this way: because we created our `image_model`s with a `vmap`, functions can now only be called after crossing `vmap` boundaries. There is very good reason for this! To learn more, read the section of the equinox documentation on [model ensembling](https://docs.kidger.site/equinox/tricks/#ensembling).\n",
     "\n",
     "Finally, we can define functions to batch and sum over images! To do this, we will complete the picture of how to use `equinox` filtered transformations by demonstrating `eqx.combine`. This function recombines a partitioned pytree, allowing us to smoothly pass over a `vmap` boundary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,23 +251,21 @@
     "\n",
     "\n",
     "@partial(eqx.filter_vmap, in_axes=(0, None))\n",
-    "def compute_image_stack(imaging_pipeline_vmap, imaging_pipeline_novmap):\n",
+    "def compute_image_stack(image_model_vmap, image_model_novmap):\n",
     "    \"\"\"Compute a batch of images at different poses.\"\"\"\n",
-    "    imaging_pipeline = eqx.combine(imaging_pipeline_vmap, imaging_pipeline_novmap)\n",
-    "    return imaging_pipeline.render()\n",
+    "    image_model = eqx.combine(image_model_vmap, image_model_novmap)\n",
+    "    return image_model.render()\n",
     "\n",
     "\n",
     "@eqx.filter_jit\n",
-    "def compute_micrograph(imaging_pipeline_vmap, imaging_pipeline_novmap):\n",
+    "def compute_micrograph(image_model_vmap, image_model_novmap):\n",
     "    \"\"\"Sum together the image stack.\"\"\"\n",
-    "    return jnp.sum(\n",
-    "        compute_image_stack(imaging_pipeline_vmap, imaging_pipeline_novmap), axis=0\n",
-    "    )"
+    "    return jnp.sum(compute_image_stack(image_model_vmap, image_model_novmap), axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +293,7 @@
    "source": [
     "# Compute the image and plot\n",
     "fig, ax = plt.subplots(figsize=(5.5, 5.5))\n",
-    "micrograph = compute_micrograph(imaging_pipeline_vmap, imaging_pipeline_novmap)\n",
+    "micrograph = compute_micrograph(image_model_vmap, image_model_novmap)\n",
     "plot_image(\n",
     "    micrograph,\n",
     "    fig,\n",
