--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -322,17 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Any\n",
     "\n",
     "\n",
-    "def build_imaging_pipeline_from_particle_parameters(\n",
+    "def build_image_model_from_particle_parameters(\n",
     "    relion_particle_parameters: RelionParticleParameters,\n",
     "    args: Any,\n",
-    ") -> cxs.ContrastImagingPipeline:\n",
+    ") -> cxs.ContrastImageModel:\n",
     "    potential, potential_integrator = args\n",
     "\n",
     "    structural_ensemble = cxs.SingleStructureEnsemble(\n",
@@ -344,10 +344,10 @@
     "        potential_integrator,\n",
     "        relion_particle_parameters.transfer_theory,\n",
     "    )\n",
-    "    imaging_pipeline = cxs.ContrastImagingPipeline(\n",
+    "    image_model = cxs.ContrastImageModel(\n",
     "        relion_particle_parameters.instrument_config, scattering_theory\n",
     "    )\n",
-    "    return imaging_pipeline"
+    "    return image_model"
    ]
   },
   {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,10 +367,8 @@
     "    particle_parameters: RelionParticleParameters,\n",
     "    args: Any,\n",
     "):\n",
-    "    imaging_pipeline = build_imaging_pipeline_from_particle_parameters(\n",
-    "        particle_parameters, args\n",
-    "    )\n",
-    "    return imaging_pipeline.render()"
+    "    image_model = build_image_model_from_particle_parameters(particle_parameters, args)\n",
+    "    return image_model.render()"
    ]
   },
   {
@@ -499,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,11 +517,11 @@
     "        potential_integrator,\n",
     "        particle_parameters.transfer_theory,\n",
     "    )\n",
-    "    imaging_pipeline = cxs.ContrastImagingPipeline(\n",
+    "    image_model = cxs.ContrastImageModel(\n",
     "        particle_parameters.instrument_config, scattering_theory\n",
     "    )\n",
     "    distribution = dist.IndependentGaussianFourierModes(\n",
-    "        imaging_pipeline,\n",
+    "        image_model,\n",
     "        signal_scale_factor=jnp.sqrt(instrument_config.n_pixels),\n",
     "        variance_function=op.Constant(1.0),\n",
     "    )\n",
