--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
     "    structural_ensemble, potential_integrator, transfer_theory\n",
     ")\n",
     "# ... and finally the imaging pipeline.\n",
-    "imaging_pipeline = cxs.ContrastImagingPipeline(\n",
+    "image_model = cxs.ContrastImageModel(\n",
     "    particle_stack.parameters.instrument_config, scattering_theory\n",
     ")"
    ]
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice we are doing something that may seem a little odd for those new to JAX---we are building an `imaging_pipeline` that has the grid of poses loaded into it. Hopefully the reason for doing this will become clear, however, note that this is just one possible pattern for writing a script, and people should create a workflow that works best for them!\n",
+    "Notice we are doing something that may seem a little odd for those new to JAX---we are building an `image_model` that has the grid of poses loaded into it. Hopefully the reason for doing this will become clear, however, note that this is just one possible pattern for writing a script, and people should create a workflow that works best for them!\n",
     "\n",
     "It's time now to define the cross-correlation loss.\n",
     "\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
     "# have a batch dimension. These parameters are those not in the RELION\n",
     "# optics group.\n",
     "per_particle_filter_spec = get_filter_spec(\n",
-    "    imaging_pipeline,\n",
+    "    image_model,\n",
     "    lambda p: (p.scattering_theory.transfer_theory, p.instrument_config),\n",
     ")\n",
     "\n",
@@ -292,22 +292,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we have to break up the `imaging_pipeline` into pieces using `equinox.partition`, so that we may smoothly pass through jit/vmap boundaries bfeore recombining pieces using `equinox.combine`. See the [Simulate a batch of images](https://mjo22.github.io/cryojax/examples/simulate-micrograph/) tutorial for an introduction to pytree manipulation with `equinox`."
+    "Now, we have to break up the `image_model` into pieces using `equinox.partition`, so that we may smoothly pass through jit/vmap boundaries bfeore recombining pieces using `equinox.combine`. See the [Simulate a batch of images](https://mjo22.github.io/cryojax/examples/simulate-micrograph/) tutorial for an introduction to pytree manipulation with `equinox`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get a specification for where the grid points are\n",
     "tree_grid_filter_spec = get_filter_spec(\n",
-    "    imaging_pipeline, lambda p: p.scattering_theory.structural_ensemble.pose.wxyz\n",
+    "    image_model, lambda p: p.scattering_theory.structural_ensemble.pose.wxyz\n",
     ")\n",
-    "# ... split up the `imaging_pipeline` into grid points and non-grid points\n",
+    "# ... split up the `image_model` into grid points and non-grid points\n",
     "pipeline_tree_grid, pipeline_non_tree_grid = eqx.partition(\n",
-    "    imaging_pipeline, tree_grid_filter_spec\n",
+    "    image_model, tree_grid_filter_spec\n",
     ")\n",
     "# ... and again into per-particle parameters and non-per-particle parameters\n",
     "per_particle_pipeline, non_per_particle_pipeline = eqx.partition(\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -360,14 +360,14 @@
     "plot_image(\n",
     "    irfftn(\n",
     "        test_simulated_fourier_image_stack[0],\n",
-    "        s=imaging_pipeline.instrument_config.shape,\n",
+    "        s=image_model.instrument_config.shape,\n",
     "    ),\n",
     "    fig,\n",
     "    axes[0],\n",
     "    label=\"Test simiulated image\",\n",
     ")\n",
     "plot_image(\n",
-    "    irfftn(fourier_image_stack[0], s=imaging_pipeline.instrument_config.shape),\n",
+    "    irfftn(fourier_image_stack[0], s=image_model.instrument_config.shape),\n",
     "    fig,\n",
     "    axes[1],\n",
     "    label=\"Test observed data\",\n",
