--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -191,7 +191,9 @@
     "transfer_theory = particle_stack.parameters.transfer_theory\n",
     "potential_integrator = cxs.FourierSliceExtraction(interpolation_order=1)\n",
     "scattering_theory = cxs.WeakPhaseScatteringTheory(\n",
-    "    structural_ensemble, potential_integrator, transfer_theory\n",
+    "    structural_ensemble,\n",
+    "    potential_integrator,\n",
+    "    transfer_theory,  # type: ignore\n",
     ")\n",
     "# ... and finally the imaging pipeline.\n",
     "image_model = cxs.ContrastImageModel(\n",
