--- a/docs/examples/multislice.ipynb
+++ b/docs/examples/multislice.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "    select=\"not element H\",\n",
     "    loads_b_factors=True,\n",
     ")\n",
-    "atom_potential = cxs.PengAtomicPotential(atom_positions, atom_identities)  # , b_factors)"
+    "atom_potential = cxs.PengAtomicPotential(atom_positions, atom_identities, b_factors)"
    ]
   },
   {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,13 +169,13 @@
     ")\n",
     "high_energy_scattering_theory = cxe.HighEnergyScatteringTheory(\n",
     "    structural_ensemble,\n",
-    "    cxs.GaussianMixtureProjection(use_error_functions=True),\n",
+    "    cxs.GaussianMixtureProjection(),\n",
     "    cxe.WaveTransferTheory(ctf),\n",
     "    amplitude_contrast_ratio=ac,\n",
     ")\n",
     "weak_phase_scattering_theory = cxs.WeakPhaseScatteringTheory(\n",
     "    structural_ensemble,\n",
-    "    cxs.GaussianMixtureProjection(use_error_functions=True),\n",
+    "    cxs.GaussianMixtureProjection(),\n",
     "    cxs.ContrastTransferTheory(ctf, amplitude_contrast_ratio=ac, phase_shift=0.0),\n",
     ")"
    ]
