change jax.random.PRGNKey to jax.random.key

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
    ],
    "source": [
     "# Simulate each image, drawing from the stochastic parts of the model\n",
-    "key = jax.random.PRNGKey(0)\n",
+    "key = jax.random.key(0)\n",
     "fig, axes = plt.subplots(ncols=2, figsize=(7, 4))\n",
     "ax1, ax2 = axes\n",
     "im1 = plot_image(\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
     "    normalizes_signal=True,\n",
     ")\n",
     "# ... then, either simulate an image from this distribution\n",
-    "key = jax.random.PRNGKey(seed=0)\n",
+    "key = jax.random.key(seed=0)\n",
     "\n",
     "fig, axes = plt.subplots(ncols=2, figsize=(7, 4))\n",
     "ax1, ax2 = axes\n",
@@ -313,7 +313,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax",
+   "display_name": "cryojax-env",
    "language": "python",
    "name": "python3"
   },
@@ -327,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
