--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
     "\n",
     "# Generate RNG keys\n",
     "number_of_images = 100\n",
-    "keys = jax.random.split(jax.random.PRNGKey(0), number_of_images)\n",
+    "keys = jax.random.split(jax.random.key(0), number_of_images)\n",
     "\n",
     "# ... instantiate the RelionParticleParameterDataset\n",
     "# particle_parameters_vmap, particle_parameters_novmap = make_particle_parameters(\n",
@@ -439,7 +439,7 @@
     "    - `overwrite`: whether or not you want existing files to be overwritten.\n",
     "    - `compression`: mrcfile compression, see the `mrcfile` library docs for more information.\n",
     "\n",
-    "    If you add a seed, then `compute_image` should take a `jax.random.PRNGKey` as its first argument (next example), which is needed to generate a sample of the noise from whatever distribution you define.\n",
+    "    If you add a seed, then `compute_image` should take a `jax.random.key` as its first argument (next example), which is needed to generate a sample of the noise from whatever distribution you define.\n",
     "\n",
     "    Inside our code we will call your `compute_image` function to generate an image stack, and then save it as an mrcfile."
    ]
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
