--- a/docs/examples/cross-correlation-search.ipynb
+++ b/docs/examples/cross-correlation-search.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
     "\n",
     "# Create the grid\n",
     "number_of_poses = 100_000\n",
-    "keys = jax.random.split(jax.random.PRNGKey(0), number_of_poses)\n",
+    "keys = jax.random.split(jax.random.key(0), number_of_poses)\n",
     "pose_grid = cxs.QuaternionPose.from_rotation(make_rotation_grid(keys))"
    ]
   },
@@ -586,7 +586,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax",
+   "display_name": "cryojax-env",
    "language": "python",
    "name": "python3"
   },
@@ -600,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
