--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -222,7 +222,7 @@
    "source": [
     "# Generate RNG keys\n",
     "number_of_poses = 20\n",
-    "keys = jax.random.split(jax.random.PRNGKey(12345), number_of_poses)\n",
+    "keys = jax.random.split(jax.random.key(12345), number_of_poses)\n",
     "\n",
     "# ... instantiate the instrument_pipeline\n",
     "image_model_vmap, image_model_novmap = make_image_model(\n",
@@ -315,7 +315,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax",
+   "display_name": "cryojax-env",
    "language": "python",
    "name": "python3"
   },
@@ -329,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
