include example of no per_particle_args in tutorial

--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -362,14 +362,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_image(\n",
     "    particle_parameters: RelionParticleParameters,\n",
     "    args: Any,\n",
-    "    per_particle_args=None,  # TODO: explain when PR is finished\n",
     "):\n",
     "    image_model = build_image_model_from_particle_parameters(particle_parameters, args)\n",
     "    return image_model.render()"
@@ -400,24 +399,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we can use this function to write a particle stack!"
+    "Finally, we can use this function to write a particle stack!\n",
+    "\n",
+    "!!! info \"Our `write_simulate_image_stack_from_starfile` function expects your image computation function to be defined as `def myimage_comp_func(particle_parameters, constant_args, per_particle_args)`. However, the function defined above does not satisfy this. Let's see how to get around it\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "args = (potential, potential_integrator)  # the args compute_image takes\n",
     "\n",
-    "# TODO: DUMMY FOR NOW\n",
-    "dummy_per_particle_args = jnp.arange(len(parameter_dataset))\n",
     "write_simulated_image_stack_from_starfile(\n",
     "    parameter_dataset,\n",
-    "    compute_image,\n",
+    "    lambda x, y, z: compute_image(x, y),\n",
     "    constant_args=args,\n",
-    "    per_particle_args=dummy_per_particle_args,\n",
+    "    per_particle_args=(),  # set this to some empty pytree\n",
     "    is_jittable=True,\n",
     "    batch_size_per_mrc=10,\n",
     "    overwrite=True,\n",
@@ -429,6 +428,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## TODO: Fix this\n",
+    "\n",
     "!!! info \"How does `write_simulated_image_stack_from_starfile` work?\"\n",
     "\n",
     "    The arguments to call this function are:\n",
@@ -625,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
