change ContrastTransferFunction to AberratedAstigmaticCTF

--- a/docs/examples/simulating-and-reweighting-ensembles.ipynb
+++ b/docs/examples/simulating-and-reweighting-ensembles.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
     "\n",
     "    # ... build the CTF\n",
     "    transfer_theory = cxs.ContrastTransferTheory(\n",
-    "        ctf=cxs.ContrastTransferFunction(\n",
+    "        ctf=cxs.AberratedAstigmaticCTF(\n",
     "            defocus_in_angstroms=defocus_in_angstroms,\n",
     "            astigmatism_in_angstroms=astigmatism_in_angstroms,\n",
     "            astigmatism_angle=astigmatism_angle,\n",
