--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -154,7 +154,7 @@
     "\n",
     "    # ... build the CTF\n",
     "    transfer_theory = cxs.ContrastTransferTheory(\n",
-    "        ctf=cxs.ContrastTransferFunction(\n",
+    "        ctf=cxs.AberratedAstigmaticCTF(\n",
     "            defocus_in_angstroms=defocus_in_angstroms,\n",
     "            astigmatism_in_angstroms=astigmatism_in_angstroms,\n",
     "            astigmatism_angle=astigmatism_angle,\n",
