set constant and per particle arguments as optional, and remove unnecessary function

--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,9 +414,11 @@
     "\n",
     "write_simulated_image_stack_from_starfile(\n",
     "    parameter_dataset,\n",
-    "    lambda x, y, z: compute_image(x, y),\n",
+    "    lambda particle_params, const_args, _: compute_image(\n",
+    "        particle_params, const_args\n",
+    "    ),  # defines a new function\n",
     "    constant_args=args,\n",
-    "    per_particle_args=(),  # set this to some empty pytree\n",
+    "    # per_particle_args=None,  # this is the default value\n",
     "    is_jittable=True,\n",
     "    batch_size_per_mrc=10,\n",
     "    overwrite=True,\n",
@@ -473,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
