scattering factor parameter table is an xarray.Dataset, and PengAtomicPotential gets scattering factors directly

--- a/docs/examples/compute-potential.ipynb
+++ b/docs/examples/compute-potential.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -62,6 +62,10 @@
    ],
    "source": [
     "import cryojax.simulator as cxs\n",
+    "from cryojax.constants import (\n",
+    "    get_tabulated_scattering_factor_parameters,\n",
+    "    read_peng_element_scattering_factor_parameter_table,\n",
+    ")\n",
     "from cryojax.io import read_atoms_from_pdb\n",
     "\n",
     "\n",
@@ -69,7 +73,14 @@
     "    \"./data/5w0s.pdb\",\n",
     "    center=True,\n",
     ")\n",
-    "atom_potential = cxs.PengAtomicPotential(atom_positions, atom_identities)\n",
+    "scattering_factor_parameters = get_tabulated_scattering_factor_parameters(\n",
+    "    atom_identities, read_peng_element_scattering_factor_parameter_table()\n",
+    ")\n",
+    "atom_potential = cxs.PengAtomicPotential(\n",
+    "    atom_positions,\n",
+    "    scattering_factor_a=scattering_factor_parameters[\"a\"],\n",
+    "    scattering_factor_b=scattering_factor_parameters[\"b\"],\n",
+    ")\n",
     "print(atom_potential)"
    ]
   },
