--- a/docs/examples/ewald-sphere.ipynb
+++ b/docs/examples/ewald-sphere.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,10 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import cryojax.simulator as cxs\n",
+    "from cryojax.constants import (\n",
+    "    get_tabulated_scattering_factor_parameters,\n",
+    "    read_peng_element_scattering_factor_parameter_table,\n",
+    ")\n",
     "from cryojax.io import read_atoms_from_pdb\n",
     "\n",
     "\n",
@@ -20,7 +24,15 @@
     "    select=\"not element H\",\n",
     "    loads_b_factors=True,\n",
     ")\n",
-    "atom_potential = cxs.PengAtomicPotential(atom_positions, atom_identities, b_factors)\n",
+    "scattering_factor_parameters = get_tabulated_scattering_factor_parameters(\n",
+    "    atom_identities, read_peng_element_scattering_factor_parameter_table()\n",
+    ")\n",
+    "atom_potential = cxs.PengAtomicPotential(\n",
+    "    atom_positions,\n",
+    "    scattering_factor_a=scattering_factor_parameters[\"a\"],\n",
+    "    scattering_factor_b=scattering_factor_parameters[\"b\"],\n",
+    "    b_factors=b_factors,\n",
+    ")\n",
     "\n",
     "instrument_config = cxs.InstrumentConfig(\n",
     "    shape=(109, 110),\n",
@@ -193,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax-env",
+   "display_name": "cryojax",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
