--- a/docs/examples/multislice.ipynb
+++ b/docs/examples/multislice.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,10 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import cryojax.simulator as cxs\n",
+    "from cryojax.constants import (\n",
+    "    get_tabulated_scattering_factor_parameters,\n",
+    "    read_peng_element_scattering_factor_parameter_table,\n",
+    ")\n",
     "from cryojax.io import read_atoms_from_pdb\n",
     "\n",
     "\n",
@@ -26,7 +30,15 @@
     "    select=\"not element H\",\n",
     "    loads_b_factors=True,\n",
     ")\n",
-    "atom_potential = cxs.PengAtomicPotential(atom_positions, atom_identities, b_factors)"
+    "scattering_factor_parameters = get_tabulated_scattering_factor_parameters(\n",
+    "    atom_identities, read_peng_element_scattering_factor_parameter_table()\n",
+    ")\n",
+    "atom_potential = cxs.PengAtomicPotential(\n",
+    "    atom_positions,\n",
+    "    scattering_factor_a=scattering_factor_parameters[\"a\"],\n",
+    "    scattering_factor_b=scattering_factor_parameters[\"b\"],\n",
+    "    b_factors=b_factors,\n",
+    ")"
    ]
   },
   {
