--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -292,15 +292,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from cryojax.constants import (\n",
+    "    get_tabulated_scattering_factor_parameters,\n",
+    "    read_peng_element_scattering_factor_parameter_table,\n",
+    ")\n",
+    "\n",
+    "\n",
     "filename = \"./data/groel_chainA.pdb\"\n",
     "atom_positions, atom_identities, b_factors = read_atoms_from_pdb(\n",
     "    filename, center=True, select=\"not element H\", loads_b_factors=True\n",
     ")\n",
-    "atomic_potential = cxs.PengAtomicPotential(atom_positions, atom_identities, b_factors)\n",
+    "scattering_factor_parameters = get_tabulated_scattering_factor_parameters(\n",
+    "    atom_identities, read_peng_element_scattering_factor_parameter_table()\n",
+    ")\n",
+    "atomic_potential = cxs.PengAtomicPotential(\n",
+    "    atom_positions,\n",
+    "    scattering_factor_a=scattering_factor_parameters[\"a\"],\n",
+    "    scattering_factor_b=scattering_factor_parameters[\"b\"],\n",
+    "    b_factors=b_factors,\n",
+    ")\n",
     "\n",
     "# get values from the \"optics\" datablock in the starfile\n",
     "box_size = parameter_dataset[0].instrument_config.shape[0]\n",
@@ -670,7 +684,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax-env",
+   "display_name": "cryojax",
    "language": "python",
    "name": "python3"
   },
@@ -684,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
