more fixes to linting

--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,9 @@
    "source": [
     "def compute_image_with_noise(\n",
     "    relion_particle_parameters: RelionParticleParameters,\n",
-    "    constant_args: [cxs.AbstractPotentialRepresentation, cxs.AbstractPotentialIntegrator],\n",
+    "    constant_args: Tuple[\n",
+    "        cxs.AbstractPotentialRepresentation, cxs.AbstractPotentialIntegrator\n",
+    "    ],\n",
     "    per_particle_args: Tuple[float, float, PRNGKeyArray],\n",
     "):\n",
     "    potential, potential_integrator = constant_args\n",
@@ -583,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
