more robust envelope reading from starfile

--- a/docs/examples/simulate-relion-dataset.ipynb
+++ b/docs/examples/simulate-relion-dataset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Data/Documents/PhD/Research/cryojax_stuff/cryojax/src/cryojax/simulator/_potential_representation/atom_potential.py:88: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "  \"\"\"An atomistic representation of scattering potential as a mixture of\n"
+     ]
+    }
+   ],
    "source": [
     "# CryoJAX imports\n",
     "\n",
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,9 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Data/Documents/PhD/Research/cryojax_stuff/cryojax/src/cryojax/data/_relion/_starfile_dataset.py:571: UserWarning: loads_envelope was set to True, but no envelope parameters were found. Setting envelope as None. Make sure your starfile is correctly formatted or set loads_envelope=False\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from cryojax.constants import (\n",
     "    get_tabulated_scattering_factor_parameters,\n",
@@ -689,7 +707,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cryojax",
+   "display_name": "cryojax-env",
    "language": "python",
    "name": "python3"
   },
@@ -703,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
